[package]
name = "GromAl premium"
version = "0.1.0"
description = "GromAl premium"
authors = ["GromAl Studio"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.3"

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

